--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=SuYjY9"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=SuYjY9" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=QkvL72"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=QkvL72" type="text/css">
 
   
   
@@ -260,7 +260,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ekwW7G3jH7Gpdlkf3lrNpz2TfbOJ6tJBx2lSswHP5PDynFyy+5M6+Nfth9CUerAWoRCg56xpYSbNLcwbgWqy5hdS+u8p8zk1L2W9bkgSEb8SafQr3LlYYAF7dD5B0BY2">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="kBG+4k8oH3XtyVoZ4algcHIVBArP+FbpH0LnrbjJZH0mXRJVtjRIJZdWgaOua+TDg2HIatcXW8kAiwFPeZCQ184KQtWQ6ozgKdASMqq8DCuoMDnvE+lz0B4mkZ7eIxrg">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Poštovani,
 
@@ -280,9 +280,7 @@ MedLink tim</div>
                         <div class="col-md col-sm-12 form-group mb-3" data-for="email">
                             <input type="email" name="email" placeholder="E-mail Adresa" data-form-field="email" class="form-control" value="" id="email-contact-form-3-uaChoEiIRl">
                         </div>
-                        <div class="col-12 form-group mb-3 mb-3" data-for="url">
-                            <input type="url" name="url" placeholder="Kontakt Telefon" data-form-field="url" class="form-control" value="" id="url-contact-form-3-uaChoEiIRl">
-                        </div>
+                        
                         <div class="col-12 form-group mb-3" data-for="textarea">
                             <textarea name="textarea" placeholder="Molimo dostavite: termin koji bi vam odgovarao, kontakt telefon" data-form-field="textarea" class="form-control" id="textarea-contact-form-3-uaChoEiIRl"></textarea>
                         </div>
@@ -372,15 +370,15 @@ MedLink tim</div>
 							</div>
 						</div>
 					</div>
-					<div id="bootstrap-accordion_15" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+					<div id="bootstrap-accordion_7" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
 						<div class="card">
 							<div class="card-header" role="tab" id="headingOne">
-								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_15" aria-expanded="false" aria-controls="collapse1">
+								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_7" aria-expanded="false" aria-controls="collapse1">
 									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5"><em>Koliko su moji podaci sigurni?</em></h6>
 									<span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
 								</a>
 							</div>
-							<div id="collapse1_15" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_15">
+							<div id="collapse1_7" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_7">
 								<div class="panel-body">
 									<p class="mbr-fonts-style panel-text display-7">
 										Vaši podaci su zaštićeni na najvišem nivou, gotovo neprobojni!
@@ -390,12 +388,12 @@ MedLink tim</div>
 						</div>
 						<div class="card">
 							<div class="card-header" role="tab" id="headingOne">
-								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_15" aria-expanded="false" aria-controls="collapse2">
+								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_7" aria-expanded="false" aria-controls="collapse2">
 									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5"><em>Da li mogu prilagoditi softver?</em></h6>
 									<span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
 								</a>
 							</div>
-							<div id="collapse2_15" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_15">
+							<div id="collapse2_7" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_7">
 								<div class="panel-body">
 									<p class="mbr-fonts-style panel-text display-7">
 										Određene komponte se mogu lako prilagodjavati kroz podešavanje softvera, dok stvari vezane za sam razvoj softvera uvek uzimamo na razmatranje.</p>
@@ -404,12 +402,12 @@ MedLink tim</div>
 						</div>
 						<div class="card">
 							<div class="card-header" role="tab" id="headingOne">
-								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_15" aria-expanded="false" aria-controls="collapse3">
+								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_7" aria-expanded="false" aria-controls="collapse3">
 									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5"><em>Da li je korisnicima obezbeđena obuka?</em></h6>
 									<span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
 								</a>
 							</div>
-							<div id="collapse3_15" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_15">
+							<div id="collapse3_7" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_7">
 								<div class="panel-body">
 									<p class="mbr-fonts-style panel-text display-7">Nudimo obuku na nivou stručnjaka kako bismo iskoristili puni potencijal Medlinka!</p>
 								</div>
@@ -417,12 +415,12 @@ MedLink tim</div>
 						</div>
 						<div class="card">
 							<div class="card-header" role="tab" id="headingOne">
-								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_15" aria-expanded="false" aria-controls="collapse4">
+								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_7" aria-expanded="false" aria-controls="collapse4">
 									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5"><em>Šta ako se susretnem sa problemima?</em></h6>
 									<span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
 								</a>
 							</div>
-							<div id="collapse4_15" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_15">
+							<div id="collapse4_7" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_7">
 								<div class="panel-body">
 									<p class="mbr-fonts-style panel-text display-7">
 										Naš tim za podršku je na raspolaganju, spreman da reši sve probleme sa softverom!
@@ -432,14 +430,14 @@ MedLink tim</div>
 						</div>
 						<div class="card">
 							<div class="card-header" role="tab" id="headingOne">
-								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse5_15" aria-expanded="false" aria-controls="collapse5">
+								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse5_7" aria-expanded="false" aria-controls="collapse5">
 									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5"><em>
 										What areas do you deliver to?
 									</em></h6>
 									<span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
 								</a>
 							</div>
-							<div id="collapse5_15" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_15">
+							<div id="collapse5_7" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_7">
 								<div class="panel-body">
 									<p class="mbr-fonts-style panel-text display-7">
 										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vestibulum
@@ -555,7 +553,7 @@ MedLink tim</div>
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2196761" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag & Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2196761" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com">Mobirise.com </a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
